# plexSync

./: COMPLETE_PROJECT_OVERVIEW.md  DOWNLOADED_MEDIA_MANAGEMENT_PLAN.md  PHASE1_CLI_SUMMARY.md  PHASE1_DOWNLOADED_SUMMARY.md  PHASE2_NAVIGATION_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PROJECT_FINAL_SUMMARY.md  README.md  TESTING_PLAN.md  pyproject.toml  test_hierarchical_browsing.py  test_interactive_phase4.py  test_interactive_sync.py  test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4_advanced.py
docs/: INTERACTIVE_SYNC_PLAN.md  SUCCESS_METRICS.md
src/plexsync/: __init__.py  __main__.py  advanced_duplicates.py  cli.py  compatibility.py  config.py  datasets.py  downloaded.py  downloaded_browser.py  environment.py  file_operations.py  health_checker.py  integrity.py  interactive.py  media_finder.py  mount.py  progress.py  quick_start.py  resync_manager.py  retry.py  search_utils.py  settings_manager.py  setup_wizard.py  smart_organization.py  storage_analytics.py  sync.py  usage_analytics.py
tests/: __init__.py  test_compatibility.py  test_quick_start.py
